# genloppy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  COMPATIBILITY.md  MANIFEST.in  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
doc/: REQ_configurator.md  REQ_item.md  REQ_log_files.md  REQ_main.md  REQ_output.md  REQ_portage_configuration.md
doc/parser/: REQ_emerge_log.md  REQ_entry_handler.md  REQ_entry_handler_api.md  REQ_entry_handler_wrapper.md  REQ_pms.md  REQ_tokenizer.md
doc/parser/filter/: REQ_filter.md  REQ_package.md  REQ_regex.md
doc/processor/: REQ_api.md  REQ_base.md  REQ_duration.md  REQ_merge.md  REQ_merge_unmerge.md  REQ_pretend.md  REQ_processor.md  REQ_sync.md  REQ_time.md  REQ_unmerge.md
pym/genloppy/: __main__.py  configurator.py  item.py  main.py  output.py
pym/genloppy/parser/: emerge_log.py  entry_handler.py  entry_handler_api.py  pms.py  tokenizer.py
pym/genloppy/parser/filter/: __init__.py  package.py  regex.py
pym/genloppy/parser/tst/: test_emerge_log.py  test_entry_handler.py  test_tokenizer.py
pym/genloppy/processor/: __init__.py  api.py  base.py  merge.py  merge_unmerge.py  pretend.py  sync.py  unmerge.py
pym/genloppy/processor/tst/: test___init__.py  test_api.py  test_base.py  test_merge.py  test_merge_unmerge.py  test_sync.py  test_unmerge.py
pym/genloppy/tst/: test_configurator.py  test_main.py  test_output.py
src/genloppy/: configurator.py  log_files.py  main.py  output.py  portage_configuration.py
src/genloppy/parser/: entry_handler.py  entry_handler_wrapper.py  pms.py  tokenizer.py
src/genloppy/parser/filter/: __init__.py  package.py  regex.py
src/genloppy/processor/: __init__.py  api.py  base.py  duration.py  merge.py  merge_unmerge.py  pretend.py  sync.py  time.py  unmerge.py
tests/: test_configurator.py  test_log_files.py  test_main.py  test_output.py  test_portage_configuration.py
tests/genloppy/: test_configurator.py  test_main.py  test_output.py
tests/genloppy/parser/: test_entry_handler_api.py  test_tokenizer.py
tests/genloppy/parser/filter/: test_package.py  test_regex.py
tests/genloppy/processor/: test___init__.py  test_merge.py  test_merge_unmerge.py  test_pretend.py  test_sync.py  test_unmerge.py
tests/parser/: test_emerge_log.py  test_entry_handler.py  test_entry_handler_api.py  test_entry_handler_wrapper.py  test_tokenizer.py
tests/parser/filter/: test__init__.py  test_package.py  test_regex.py
tests/processor/: __init__.py  test__init__.py  test_api.py  test_base.py  test_duration.py  test_merge.py  test_merge_unmerge.py  test_pretend.py  test_sync.py  test_time.py  test_unmerge.py
tests/test_log_files/: garbage  good.1.log.bz2  good.1.log.lzma  good.2.log.bz2  good.2.log.lzma  malformed.log.bz2  malformed.log.lzma
