[build-system]
requires = ["setuptools>=67.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genloppy"
version = "0.2.3"
description = "genlop drop in purely written in python"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "cklaucke", email = "33376323+cklaucke@users.noreply.github.com" }
]
dependencies = [
    "black==25.1.0",
    "build==1.2.2.post1",
    "mypy==1.15.0",
    "mypy-extensions==1.1.0",
    "pytest==8.3.5",
    "pyupgrade==3.19.1",
    "ruff==0.11.7",
    "setuptools==79.0.1",
    "tox==4.25.0",
    "types-colorama==0.4.15.20240311",
    "types-docutils==0.21.0.20241128",
    "types-pygments==2.19.0.20250305",
    "types-setuptools==79.0.0.20250422",
]

[project.urls]
"Homepage" = "https://github.com/cklaucke/genloppy"

[project.scripts]
genloppy = "genloppy.main:main"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.check-manifest]
ignore = [
    "*.md",
    ".pre-commit-config.yaml",
    "LICENSE",
    "requirements.txt",
    "tox.ini",
    "doc/**",
    "tests/**",
]

[tool.coverage.run]
branch = true
source = [
    "genloppy",
    "tests",
]
parallel = true

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.mypy]
files = "src, tests"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
#strict = true
check_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
addopts = """
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=*.rst
    --tb=short"""

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "E", # pycodestyle errors
    "ERA", # flake8-eradicate/eradicate
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle warnings
    "YTT", # flake8-2020
]

[tool.ruff.lint.isort]
known-first-party = ["genloppy"]
