[build-system]
requires = ["setuptools>=67.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genloppy"
version = "0.2.5"
description = "genlop drop in purely written in python"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-2.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "cklaucke", email = "33376323+cklaucke@users.noreply.github.com" }
]
dependencies = [
    "build>=1.3.0,<2.0.0",
    "mypy>=1.18.2,<2.0.0",
    "mypy-extensions>=1.1.0,<2.0.0",
    "pyrefly>=0.50.0",
    "pytest>=9.0.0,<10.0.0",
    "pyupgrade>=3.21.0,<4.0.0",
    "ruff>=0.14.0",
    "setuptools>=80.9.0,<81.0.0",
    "tox>=4.31.0,<5.0.0",
    "ty",
    "types-colorama>=0.4.15.20250801",
    "types-docutils>=0.22.2.20251006",
    "types-pygments>=2.19.0.20250809,<3",
    "types-setuptools>=80.9.0.20250822,<81",
]

[project.urls]
"Homepage" = "https://github.com/cklaucke/genloppy"

[project.scripts]
genloppy = "genloppy.main:main"

[tool.black]
line-length = 120
target-version = ['py313']

[tool.check-manifest]
ignore = [
    "*.md",
    ".pre-commit-config.yaml",
    "LICENSE",
    "requirements.txt",
    "tox.ini",
    "doc/**",
    "tests/**",
]

[tool.coverage.run]
branch = true
source = [
    "genloppy",
    "tests",
]
parallel = true

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.mypy]
files = "src, tests"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
#strict = true
check_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
addopts = """
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=*.rst
    --tb=short"""

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "E", # pycodestyle errors
    "EM", # flake8-errmsg
    "ERA", # flake8-eradicate/eradicate
    "F", # pyflakes
    "FBT", # flake8-boolean-trap
    "I", # isort
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle warnings
    "YTT", # flake8-2020
]

[tool.ruff.lint.isort]
known-first-party = ["genloppy"]

[tool.pyrefly]
project-includes = [
    "src",
    "tests",
]
search-path = ["src"]
